--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,638 +1,1 @@
-
-
-body {
-  
-    font-family: "Noto Sans TC", sans-serif;
-    color: #0d1e2d;
-    background: #e0f8e8;
-    line-height: 1.3;
-    margin:0px auto;
-    padding:0px;
-    overflow-y: scroll;
-    
-}
-
-@keyframes gradient {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
-}
-
-
-.loader {
-  height: 100%;
-  width: 100%;
-  display: -ms-flexbox;
-  display: -webkit-box;
-  display: flex;
-  -ms-flex-align: center;
-  -ms-flex-pack: center;
-  -webkit-box-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  justify-content: center;
-}
-
-@keyframes rotate {
-  from {
-    transform: translate(-50%, -50%) rotate(0);
- }
-  to {
-    transform: translate(-50%, -50%) rotate(360deg);
- }
-}
-.preloader {
-  height: 100vh;
-  width: 100vw;
-  background: #e0f8e8;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 99;
-}
-.preloader__wrapper {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 200px;
-  height: 200px;
-}
-.preloader__circle {
-  width: 100%;
-  height: 100%;
-  display: inline-block;
-  z-index: 99;
-  position: relative;
-  transition: 0.3s ease;
-}
-.preloader__circle-line {
-  animation: rotate 3.5s ease-in-out infinite;
-  border-top: 1px solid transparent;
-  border-left: 1px solid #268022;
-  border-right: 1px solid #030c02;
-  border-bottom: 1px solid transparent;
-  border-radius: 50%;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-}
-.preloader__circle-line--1 {
-  width: 180px;
-  height: 180px;
-  animation-duration: 1s;
-}
-.preloader__circle-line--2 {
-  width: 160px;
-  height: 160px;
-  animation-duration: 2s;
-}
-.preloader__circle-line--3 {
-  width: 140px;
-  height: 140px;
-  animation-duration: 3s;
-}
-.preloader__circle-line--4 {
-  width: 120px;
-  height: 120px;
-  animation-duration: 4s;
-}
-.preloader__circle-line--5 {
-  width: 100px;
-  height: 100px;
-  animation-duration: 5s;
-}
-.preloader__circle-line--6 {
-  width: 80px;
-  height: 80px;
-  animation-duration: 6s;
-}
-.preloader__circle-line--7 {
-  width: 60px;
-  height: 60px;
-  animation-duration: 7s;
-}
-.preloader__circle-line--8 {
-  width: 40px;
-  height: 40px;
-  animation-duration: 8s;
-}
-.preloader__circle-line--9 {
-  width: 20px;
-  height: 20px;
-  animation-duration: 9s;
-}
-.preloader__circle-line--10 {
-  width: 0px;
-  height: 0px;
-  animation-duration: 10s;
-}
-
-
-
-
-
-
-
-  
-
-
-
-
-
-
-
-
-h1, h2, h3, h4, h5, h6, p, .font-heading, #footerrow{
-  font-family: "Raleway", sans-serif;
-}
-
-.section {
-  padding: 1rem 0;
-}
-
-.section-team {
-	font-family: "Poppins", sans-serif;
-	padding: 10px 0;
-  
-}
-
-.section-team .header-section {
-	margin-bottom: 50px;
-  
-}
-
-
-
-.section-team .header-section .title {
-    font-weight: 700;
-    font-size: 45px;
-}
-
-.section-team .single-person {
-	margin-top: 30px;
-	padding: 30px;
-	border-radius: 20px;
-  background: #e0f8e896;
-  box-shadow:  20px 20px 62px #bdbdbd70,
-             -20px -20px 62px #ffffff75;
-}
-
-.section-team .single-person:hover {
-	background: linear-gradient(to right, #09cf13b0, #17b34bb2);
-}
-
-.section-team .single-person .person-image {
-    position: relative;
-    margin-bottom: 50px;
-    border-radius: 50%;
-    border: 4px dashed transparent;
-    transition: padding .3s;
-}
-
-.section-team .single-person:hover .person-image {
-	padding: 12px;
-    border: 4px dashed #fff;
-}
-
-.section-team .single-person .person-image img {
-	width: 100%;
-    border-radius: 50%;
-}
-
-.section-team .single-person .person-image .icon {
-	position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translate(-50%,50%);
-    display: inline-block;
-    width: 60px;
-    height: 60px;
-    line-height: 60px;
-    text-align: center;
-    background: linear-gradient(to right, #09cf13, #17b34b);
-    color: #fff;
-    border-radius: 50%;
-    font-size: 24px;
-}
-
-.section-team .single-person:hover .person-image .icon {
-	background: none;
-	background-color: #fff;
-	color: #49b12a;;
-}
-
-.section-team .single-person .person-info .full-name {
-	margin-bottom: 10px;
-	font-size: 28px;
-    font-weight: 700;
-}
-
-.section-team .single-person .person-info .speciality {
-    text-transform: uppercase;
-    font-size: 14px;
-    color: #000000;;
-}
-
-.section-team .single-person:hover .full-name,
-.section-team .single-person:hover .speciality {
-	color: #fff;
-}
-
-
-.filters a {
-  color: #000;
-  display: inline-block;
-  padding-left: 10px;
-  padding-right: 10px;
-  position: relative;
-}
-
-.filters a:hover, .filters a:focus, .filters a:active {
-  text-decoration: none;
-}
-
-.filters a:hover:before {
-  content: "";
-  position: absolute;
-  left: 10px;
-  right: 10px;
-  bottom: 0;
-  height: 1px;
-  background-color: #000;
-}
-
-.filters a.active {
-  color: rgba(0, 0, 0, 0.309);
-}
-
-.filters a.active:before {
-  content: "";
-  position: absolute;
-  left: 10px;
-  right: 10px;
-  bottom: 0;
-  height: 1px;
-  background-color: #000;
-}
-
-.item {
-  border: none;
-  padding-right: 6px;
-  padding-left: 6px;
-}
-
-.item .item-wrap {
-  display: block;
-  position: relative;
-  overflow: hidden;
-  border-radius: 25px;
-  padding: 2px;
-}
-
-.item .item-wrap:after {
-  z-index: 2;
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.665);
-  visibility: hidden;
-  opacity: 0;
-  transition: .3s all ease-in-out;
-  
-}
-.jumbotron {
-  background-color: transparent;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  padding-top: 5px;
-  padding-bottom: 1px;
-  margin-bottom: 10px;
-  margin-top: 10px;
-  
-}
-
-.jumbotron ::after, ::before {
-  box-sizing: border-box;
-  border-radius: 25px;
-}
-
-.item .item-wrap img {
-  transition: .3s transform ease;
-  transform: scale(1);
-  border-radius: 25px;
-  
-}
-
-.item .item-wrap > .work-info {
-  position: absolute;
-  top: 50%;
-  width: 100%;
-  text-align: center;
-  z-index: 3;
-  transform: translateY(-50%);
-  color: #fff;
-  opacity: 0;
-  visibility: hidden;
-  margin-top: 20px;
-  transition: .3s all ease;
-}
-
-.item .item-wrap > .work-info h3 {
-  font-size: 20px;
-  margin-bottom: 0;
-}
-
-.item .item-wrap > .work-info span {
-  font-size: 14px;
-  text-transform: uppercase;
-  letter-spacing: .2rem;
-}
-
-.item .item-wrap:hover {
-  text-decoration: none;
-  border-radius: 25px;
-}
-
-.item .item-wrap:hover img {
-  transform: scale(1.05);
-}
-
-.item .item-wrap:hover:after {
-  opacity: 1;
-  visibility: visible;
-}
-
-.item .item-wrap:hover .work-info {
-  margin-top: 0px;
-  opacity: 1;
-  visibility: visible;
-}
-
-.h3 {
-  font-size: 20px;
-}
-
-.h4 {
-  font-size: 16px;
-}
-
-.heading {
-  font-size: 28px;
-}
-
-
-
-
-
-
-/*--------------------------------------------------------------
-# Header
---------------------------------------------------------------*/
-/* Custom Navmenu */
-a {
-  color: azure;
-  }
-
-  a:hover {
-  color: #fff;
-  }
-
-
-#logo {
-  width: auto; 
-  height: 35px; 
-  padding-bottom: 10px;
-}
-
-
-dl, ol, ul {
-  margin-top: 40px;
-  margin-bottom: 1rem;
-}
-
-#navbar {
-  margin-top: 0px;
-}
-
-.navbar-brand {
-  display: inline-block;
-  padding-top: 0px;
-  padding-bottom: 1rem;
-  margin-right: 1rem;
-  font-size: 1.8rem;
-  line-height: inherit;
-  white-space: nowrap;
-  margin-left: -60px;
-}
-
-.navbar-light .navbar-brand {
-  color: rgba(0,0,0,.9);
-  margin-top: 13px;
-}
-
-@media (max-width: 1920px) {
-  .navbar-brand {
-    
-    margin-left: -300px;
-  }
-  
-}
-@media (max-width: 1440px) {
-  .navbar-brand {
-    
-    margin-left: -100px;
-  }
- 
-}
-@media (max-width: 1366px) {
-  .navbar-brand {
-    
-    margin-left: -60px;
-  }
- 
-}
-@media (max-width: 1200px) {
-  .navbar-brand {
-    
-    margin-left: -15px;
-  }
- 
-}
-
-@media (max-width: 991px) {
-  .navbar-brand {
-   
-    margin-left: -30px;
-  }
- 
-}
-@media (max-width: 768px) {
-  .navbar-brand {
-    
-    margin-left: -50px;
-  }
- 
-}
-@media (max-width: 575px) {
-  .navbar-brand {
-    
-    margin-left: -20px;
-  }
- 
-}
-
-
-input + label {
-  position: fixed;
-  top: 30px;
-  right: 40px;
-  height: 20px;
-  width: 15px;
-  z-index: 5;
-  
-}
-input + label span {
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  top: 50%;
-  margin-top: -1px;
-  left: 0;
-  display: block;
-  background: #020304;
-  transition: .5s;
-  color: #000;
-  
-}
-input + label span:first-child {
-  top: 3px;
-}
-input + label span:last-child {
-  top: 16px;
-}
-label:hover {
-  cursor: pointer;
-}
-input:checked + label span {
-  opacity: 0;
-  top: 50%;
-}
-input:checked + label span:first-child {
-  opacity: 1;
-  transform: rotate(405deg);
-}
-input:checked + label span:last-child {
-  opacity: 1;
-  transform: rotate(-405deg);
-}
-input ~ nav {
-  -webkit-backdrop-filter: blur(8px);
-    backdrop-filter: blur(25px);
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 80px;
-  z-index: 3;
-  transition: .5s;
-  transition-delay: .5s;
-  overflow: hidden;
-}
-input ~ nav > ul {
-  text-align: center;
-  position: absolute;
-  top: 35%;
-  left: 20%;
-  right: 20%;
-}
-input ~ nav > ul > li {
-  opacity: 0;
-  transition: .5s;
-  transition-delay: 0s;
-  list-style-type: none;
-}
-input ~ nav > ul > li > a {
-  text-decoration: none;
-  text-transform: uppercase;
-  color: #020304;
-  font-weight: 700;
-  font-family: sans-serif;
-  display: block;
-  padding: 30px;
-}
-input ~ nav > ul > li > a:hover{
-  color: grey;
-}
-input:checked ~ nav {
-  height: 100%;
-  transition-delay: 0s;
-}
-input:checked ~ nav > ul > li {
-  opacity: 1;
-  transition-delay: .5s;
-}
-
-/*--------------------------------------------------------------
-# Footer
---------------------------------------------------------------*/
-.footer {
-  
-  position: relative;
-   bottom:0px;
-   width:100%;
-   height:50px;  
-   background:transparent;
-}
-
-.footer a {
-  color: #000;
-}
-
-.social a {
-  display: inline-block;
-  width: 35px;
-  height: 35px;
-  background: #ffffff91;
-  border-radius: 50%;
-  position: relative;
-  text-align: center;
-  color: #0d1e2d;
-  padding: 5px;
-}
-
-
-.icofont-instagram {
-  color: rgb(225,48,108);
-}
-.icofont-facebook {
-  color: #3b5998;
-  
-}
-
-
-.social a span {
-  display: inline-block;
-  left: 50%;
-  position: absolute;
-  top: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.social a:hover {
-  color: #000;
-}
-
-@media screen {
-  
-}
+body{font-family:"Noto Sans TC",sans-serif;color:#0d1e2d;background:#e0f8e8;line-height:1.3;margin:0 auto;padding:0;overflow-y:scroll}@keyframes gradient{0%{background-position:0 50%}50%{background-position:100% 50%}100%{background-position:0 50%}}.loader{height:100%;width:100%;display:-ms-flexbox;display:-webkit-box;display:flex;-ms-flex-align:center;-ms-flex-pack:center;-webkit-box-align:center;align-items:center;-webkit-box-pack:center;justify-content:center;}@keyframes rotate{from{transform:translate(-50%,-50%) rotate(0)}to{transform:translate(-50%,-50%) rotate(360deg)}}.preloader{height:100vh;width:100vw;background:#e0f8e8;position:fixed;top:0;left:0;z-index:99;}.preloader__wrapper{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);width:200px;height:200px;}.preloader__circle{width:100%;height:100%;display:inline-block;z-index:99;position:relative;transition:.3s ease;}.preloader__circle-line{animation:rotate 3.5s ease-in-out infinite;border-top:1px solid transparent;border-left:1px solid #268022;border-right:1px solid #030c02;border-bottom:1px solid transparent;border-radius:50%;position:absolute;left:50%;top:50%;}.preloader__circle-line--1{width:180px;height:180px;animation-duration:1s;}.preloader__circle-line--2{width:160px;height:160px;animation-duration:2s;}.preloader__circle-line--3{width:140px;height:140px;animation-duration:3s;}.preloader__circle-line--4{width:120px;height:120px;animation-duration:4s;}.preloader__circle-line--5{width:100px;height:100px;animation-duration:5s;}.preloader__circle-line--6{width:80px;height:80px;animation-duration:6s;}.preloader__circle-line--7{width:60px;height:60px;animation-duration:7s;}.preloader__circle-line--8{width:40px;height:40px;animation-duration:8s;}.preloader__circle-line--9{width:20px;height:20px;animation-duration:9s;}.preloader__circle-line--10{width:0;height:0;animation-duration:10s;}h1,h2,h3,h4,h5,h6,p,.font-heading,#footerrow{font-family:"Raleway",sans-serif;}.section{padding:1rem 0;}.section-team{font-family:"Poppins",sans-serif;padding:10px 0}.section-team .header-section{margin-bottom:50px}.section-team .header-section .title{font-weight:700;font-size:45px;}.section-team .single-person{margin-top:30px;padding:30px;border-radius:20px;background:#e0f8e896;box-shadow:20px 20px 62px #bdbdbd70,-20px -20px 62px #ffffff75;}.section-team .single-person:hover{background:linear-gradient(to right,#09cf13b0,#17b34bb2);}.section-team .single-person .person-image{position:relative;margin-bottom:50px;border-radius:50%;border:4px dashed transparent;transition:padding .3s;}.section-team .single-person:hover .person-image{padding:12px;border:4px dashed #fff;}.section-team .single-person .person-image img{width:100%;border-radius:50%;}.section-team .single-person .person-image .icon{position:absolute;bottom:0;left:50%;transform:translate(-50%,50%);display:inline-block;width:60px;height:60px;line-height:60px;text-align:center;background:linear-gradient(to right,#09cf13,#17b34b);color:#fff;border-radius:50%;font-size:24px;}.section-team .single-person:hover .person-image .icon{background:none;background-color:#fff;color:#49b12a;;}.section-team .single-person .person-info .full-name{margin-bottom:10px;font-size:28px;font-weight:700;}.section-team .single-person .person-info .speciality{text-transform:uppercase;font-size:14px;color:#000000;;}.section-team .single-person:hover .full-name,.section-team .single-person:hover .speciality{color:#fff;}.filters a{color:#000;display:inline-block;padding-left:10px;padding-right:10px;position:relative;}.filters a:hover,.filters a:focus,.filters a:active{text-decoration:none;}.filters a:hover:before{content:"";position:absolute;left:10px;right:10px;bottom:0;height:1px;background-color:#000;}.filters a.active{color:rgba(0,0,0,.309);}.filters a.active:before{content:"";position:absolute;left:10px;right:10px;bottom:0;height:1px;background-color:#000;}.item{border:none;padding-right:6px;padding-left:6px;}.item .item-wrap{display:block;position:relative;overflow:hidden;border-radius:25px;padding:2px;}.item .item-wrap:after{z-index:2;position:absolute;content:"";top:0;left:0;right:0;bottom:0;background:rgba(0,0,0,.665);visibility:hidden;opacity:0;transition:.3s all ease-in-out}.jumbotron{background-color:transparent;align-items:center;justify-content:center;width:100%;padding-top:5px;padding-bottom:1px;margin-bottom:10px;margin-top:10px}.jumbotron::after,::before{box-sizing:border-box;border-radius:25px;}.item .item-wrap img{transition:.3s transform ease;transform:scale(1);border-radius:25px}.item .item-wrap>.work-info{position:absolute;top:50%;width:100%;text-align:center;z-index:3;transform:translateY(-50%);color:#fff;opacity:0;visibility:hidden;margin-top:20px;transition:.3s all ease;}.item .item-wrap>.work-info h3{font-size:20px;margin-bottom:0;}.item .item-wrap>.work-info span{font-size:14px;text-transform:uppercase;letter-spacing:.2rem;}.item .item-wrap:hover{text-decoration:none;border-radius:25px;}.item .item-wrap:hover img{transform:scale(1.05);}.item .item-wrap:hover:after{opacity:1;visibility:visible;}.item .item-wrap:hover .work-info{margin-top:0;opacity:1;visibility:visible;}.h3{font-size:20px;}.h4{font-size:16px;}.heading{font-size:28px;}a{color:azure}a:hover{color:#fff}#logo{width:auto;height:35px;padding-bottom:10px;}dl,ol,ul{margin-top:40px;margin-bottom:1rem;}#navbar{margin-top:0;}.navbar-brand{display:inline-block;padding-top:0;padding-bottom:1rem;margin-right:1rem;font-size:1.8rem;line-height:inherit;white-space:nowrap;margin-left:-60px;}.navbar-light .navbar-brand{color:rgba(0,0,0,.9);margin-top:13px;}@media (max-width:1920px){.navbar-brand{margin-left:-300px}}@media (max-width:1440px){.navbar-brand{margin-left:-100px}}@media (max-width:1366px){.navbar-brand{margin-left:-60px}}@media (max-width:1200px){.navbar-brand{margin-left:-15px}}@media (max-width:991px){.navbar-brand{margin-left:-30px}}@media (max-width:768px){.navbar-brand{margin-left:-50px}}@media (max-width:575px){.navbar-brand{margin-left:-20px}}input + label{position:fixed;top:30px;right:40px;height:20px;width:15px;z-index:5}input + label span{position:absolute;width:100%;height:2px;top:50%;margin-top:-1px;left:0;display:block;background:#020304;transition:.5s;color:#000}input + label span:first-child{top:3px;}input + label span:last-child{top:16px;}label:hover{cursor:pointer;}input:checked + label span{opacity:0;top:50%;}input:checked + label span:first-child{opacity:1;transform:rotate(405deg);}input:checked + label span:last-child{opacity:1;transform:rotate(-405deg);}input ~ nav{-webkit-backdrop-filter:blur(8px);backdrop-filter:blur(25px);position:fixed;top:0;left:0;width:100%;height:80px;z-index:3;transition:.5s;transition-delay:.5s;overflow:hidden;}input ~ nav>ul{text-align:center;position:absolute;top:35%;left:20%;right:20%;}input ~ nav>ul>li{opacity:0;transition:.5s;transition-delay:0s;list-style-type:none;}input ~ nav>ul>li>a{text-decoration:none;text-transform:uppercase;color:#020304;font-weight:700;font-family:sans-serif;display:block;padding:30px;}input ~ nav>ul>li>a:hover{color:grey;}input:checked ~ nav{height:100%;transition-delay:0s;}input:checked ~ nav>ul>li{opacity:1;transition-delay:.5s;}.footer{position:relative;bottom:0;width:100%;height:50px;background:transparent;}.footer a{color:#000;}.social a{display:inline-block;width:35px;height:35px;background:#ffffff91;border-radius:50%;position:relative;text-align:center;color:#0d1e2d;padding:5px;}.icofont-instagram{color:rgb(225,48,108);}.icofont-facebook{color:#3b5998}.social a span{display:inline-block;left:50%;position:absolute;top:50%;transform:translate(-50%,-50%);}.social a:hover{color:#000;}@media screen{}
