--- a/assets/css/timeline.css
+++ b/assets/css/timeline.css
@@ -1,106 +1,1 @@
-
-.timeline {
-    position: relative;
-    padding: 1rem;
-    margin: 0 auto;
-    max-width: 1300px;
-}
-.timeline:before {
-    content: '';
-    position: absolute;
-    height: 100%;
-    border: 1px solid rgb(0, 0, 0);
-    right: 40px;
-    top: 0;
-}
-.timeline:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-@media screen and (min-width: 700px) {
-    .timeline {
-        padding: 2rem;
-   }
-    .timeline:before {
-        left: calc(50% - 1px);
-        right: auto;
-   }
-}
-.timeline__item {
-    padding: 1rem;
-    border: 2px solid rgb(0, 0, 0);
-    border-image: linear-gradient(to right, rgba(247, 247, 247, 0.719) 0%, rgb(0, 0, 0) 100%);
-    border-image-slice: 1;
-    position: relative;
-    margin: 1rem 3rem 1rem 1rem;
-    clear: both;
-}
-
-.timeline__item:after, .timeline__item:before {
-    content: '';
-    position: absolute;
-}
-.timeline__item:before {
-    right: -10px;
-    top: calc(50% - 5px);
-    border-style: solid;
-    border-color: rgb(0, 0, 0) rgb(17, 8, 13) transparent transparent;
-    border-width: 10px;
-    transform: rotate(45deg);
-}
-@media screen and (min-width: 700px) {
-    .timeline__item {
-        width: 44%;
-        margin: 1rem;
-   }
-    .timeline__item:nth-of-type(2n) {
-        float: right;
-        margin: 1rem;
-        border-image: linear-gradient(to right, rgb(0, 0, 0) 0%, rgb(255, 255, 255) 100%);
-        border-image-slice: 1;
-   }
-    .timeline__item:nth-of-type(2n):before {
-        right: auto;
-        left: -10px;
-        border-color: transparent transparent rgb(0, 0, 0) rgb(0, 0, 0);
-   }
-}
-.timeline__item--year {
-    text-align: center;
-    max-width: 150px;
-    margin: 0 48px 0 auto;
-    font-size: 1.8rem;
-    background-color: rgba(255, 255, 255, 0.8);
-    line-height: 0.8;
-    border-image: none;
-    padding: 0.5rem 1rem 1rem;
-    border-radius: 25px;
-}
-.timeline__item--year:before {
-    display: none;
-}
-@media screen and (min-width: 700px) {
-    .timeline__item--year {
-        text-align: center;
-        margin: 0 auto;
-   }
-    .timeline__item--year:nth-of-type(2n) {
-        float: none;
-        margin: 0 auto;
-        border-image: none;
-   }
-    .timeline__item--year:nth-of-type(2n):before {
-        display: none;
-   }
-}
-.timeline__title {
-    margin: 0;
-    font-family: 'Raleway', sans-serif;
-    font-size: 1.5em;
-}
-.timeline__blurb {
-    line-height: 1.5;
-    font-size: 1rem;
-    margin: 0.5rem 0 0;
-}
+ .timeline{position:relative;padding:1rem;margin:0 auto;max-width:1300px}.timeline:before{content:'';position:absolute;height:100%;border:1px solid rgb(0,0,0);right:40px;top:0}.timeline:after{content:"";display:table;clear:both}@media screen and (min-width:700px){.timeline{padding:2rem}.timeline:before{left:calc(50% - 1px);right:auto}}.timeline__item{padding:1rem;border:2px solid rgb(0,0,0);border-image:linear-gradient(to right,rgba(247,247,247,.719) 0%,rgb(0,0,0) 100%);border-image-slice:1;position:relative;margin:1rem 3rem 1rem 1rem;clear:both}.timeline__item:after,.timeline__item:before{content:'';position:absolute}.timeline__item:before{right:-10px;top:calc(50% - 5px);border-style:solid;border-color:rgb(0,0,0) rgb(17,8,13) transparent transparent;border-width:10px;transform:rotate(45deg)}@media screen and (min-width:700px){.timeline__item{width:44%;margin:1rem}.timeline__item:nth-of-type(2n){float:right;margin:1rem;border-image:linear-gradient(to right,rgb(0,0,0) 0%,rgb(255,255,255) 100%);border-image-slice:1}.timeline__item:nth-of-type(2n):before{right:auto;left:-10px;border-color:transparent transparent rgb(0,0,0) rgb(0,0,0)}}.timeline__item--year{text-align:center;max-width:150px;margin:0 48px 0 auto;font-size:1.8rem;background-color:rgba(255,255,255,.8);line-height:.8;border-image:none;padding:.5rem 1rem 1rem;border-radius:25px}.timeline__item--year:before{display:none}@media screen and (min-width:700px){.timeline__item--year{text-align:center;margin:0 auto}.timeline__item--year:nth-of-type(2n){float:none;margin:0 auto;border-image:none}.timeline__item--year:nth-of-type(2n):before{display:none}}.timeline__title{margin:0;font-family:'Raleway',sans-serif;font-size:1.5em}.timeline__blurb{line-height:1.5;font-size:1rem;margin:.5rem 0 0}
